# mas-benchmark

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
benchmark/task-tracker/docs/: architecture.md  implementation_plan.md  requirements.md
benchmark/task-tracker/src/task_tracker/: __init__.py  __main__.py  app.py  errors.py  models.py  security.py  service.py  store.py
benchmark/task-tracker/test/: test_service.py
config/: agent.json  benchmark.json  pipeline.json
docs/: nir_roadmap_full_cycle.md
multi-agent-system/: a2a_message.py  agent.py  artifact.py  benchmark.py  bertscore.py  llm_judge.py  main.py  pipeline.py  runner.py  stage_validator.py  swebench.py  tools.py  workspace.py
multi-agent-system/pipeline/: __init__.py  a2a_message.py  agent.py  benchmark.py  pipeline.py  runner.py  sdlc.py
multi-agent-system/tools/: __init__.py  artifact.py  files.py  formatting.py  json_utils.py
multi-agent-system/validation/: __init__.py  bertscore.py  llm_judge.py  stage_validator.py  swebench.py
