[project]
name = "mas-benchmark"
version = "0.1.0"
requires-python = ">=3.12,<3.15"
dependencies = ["bert-score (>=0.3.13,<0.4.0)", "langgraph (>=1.0.0,<2.0.0)", "openhands-sdk (>=1.17.0,<2.0.0)", "openhands-tools (>=1.17.0,<2.0.0)", "pydantic (>=2.13.1,<3.0.0)", "python-dotenv (>=1.1.1,<2.0.0)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
